--- a/app/react/components/PageHeader/HeaderTitle.module.css
+++ b/app/react/components/PageHeader/HeaderTitle.module.css
@@ -15,12 +15,10 @@
 .menu-list {
   background: var(--bg-dropdown-menu-color);
   border-radius: 8px;
-  border: 1px solid var(--ui-gray-5) !important;
+  border: 1px solid var(--border-dropdown-menu-color) !important;
   min-width: 180px;
   padding: 5px !important;
   box-shadow: 0 6px 12px rgb(0 0 0 / 18%);
-  @apply th-dark:!border-none;
-  @apply th-highcontrast:!border-none;
 }
 
 .menu-link {
