--- a/app/react/portainer/gitops/GitFormComposePathField/GitFormComposePathField.module.css
+++ b/app/react/portainer/gitops/GitFormComposePathField/GitFormComposePathField.module.css
@@ -1,7 +1,7 @@
 [data-reach-combobox-popover] {
   border-radius: 5px;
   border: 1px solid var(--border-form-control-color);
-  background-color: var(--bg-inputbox);
+  background-color: var(--bg-dropdown-menu-color);
   color: var(--text-form-control-color);
   z-index: 9999;
 }
